Fix T72382: Arrow keys fail in search menu